[popover] Using nested shadow DOM wrongly auto-hides popover by light dismiss https://bugs.webkit.org/show_bug.cgi?id=263081

Reviewed by Ryosuke Niwa.

Use the flat tree as mandated by the spec when calculating the nearest inclusive open popoer:
- https://html.spec.whatwg.org/#nearest-inclusive-open-popover

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-flat-tree-nested-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-flat-tree-nested.html: Added.
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::topmostPopoverAncestor):
* LayoutTests/platform/ios-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/269596@main